fixed background, added plant images, added images highlights behind the photos

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
-  background: url("./Greenhouse.jpg");
-  background-position: 'bottom left';
-  background-size: 'auto';
-  background-repeat: 'no-repeat';
+  background: url("./Greenhouse.jpg") no-repeat right top;
+  background-size: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -14,4 +12,32 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1{
+  text-align: center;
+  color: whitesmoke;
+  font-weight: 300; 
+  background-color: rgb(116, 146, 172);
+}
+
+#flower{
+  cursor: pointer;
+
+  display: block;
+  align-items: center;
+  justify-content: center;
+
+  height: 200px; 
+  width: 200px; 
+  margin-left: auto;
+  margin-right:auto;
+
+}
+
+#flower:hover{
+  /* background-color: yellow; */
+  /* outline: #333 solid 4px; */
+  /* box-shadow: 10px 10px 5px #000000; */
+  filter: drop-shadow(0 0 0.75rem rgb(255, 255, 255));
 }
